--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vera",
-  "description": "Web application for logging and viewing application deployment events",
-  "version": "79.0.0",
+  "name": "strava/fun",
+  "description": "Some fun strava stuff",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/navikt/vera.git"
+    "url": "https://github.com/matsbyfl/strava-fun.git"
   },
   "author": {
     "name": "Mats Rodney Harley Dennis Rikardo Byfuglien",
@@ -13,24 +13,18 @@
   "scripts": {
     "test": "tape test/*.js | tap-spec"
   },
-  "contributors": [
-    {
-      "name": "Kjell Johnny Amadeus Jerimia Aron Rullgardina Horvi aka jdawg",
-      "email": "johnny.horvi@nav.no"
-    }
-  ],
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 5.0.0"
   },
   "dependencies": {
     "ain2": "1.5.2",
     "body-parser": "1.3.1",
     "express": "4.4.5",
-    "lodash": "2.4.1",
+    "lodash": "^3.10.1",
     "moment": "2.8.4",
     "mongoose": "3.8.25",
-    "json-csv": "1.0.5",
-    "morgan": "1.1.1"
+    "morgan": "1.1.1",
+    "strava-v3": "^1.9.0"
   },
   "devDependencies": {
     "bootstrap": "3.3.4",
