--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "ain2": "1.5.2",
+    "async": "^1.5.2",
     "body-parser": "1.3.1",
     "express": "4.4.5",
     "lodash": "^3.10.1",
