--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strava/fun",
+  "name": "strada",
   "description": "Some fun strava stuff",
   "version": "1.0.0",
   "repository": {
@@ -21,8 +21,9 @@
     "async": "^1.5.2",
     "body-parser": "1.3.1",
     "express": "4.4.5",
+    "json-csv": "^1.2.0",
     "lodash": "^3.10.1",
-    "moment": "2.8.4",
+    "moment": "^2.8.4",
     "mongoose": "3.8.25",
     "morgan": "1.1.1",
     "strava-v3": "^1.9.0"
