--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "async": "^1.5.2",
     "body-parser": "1.3.1",
     "express": "4.4.5",
+    "express-validation": "^0.5.0",
     "flat": "^2.0.0",
     "joi": "^8.0.4",
     "json-csv": "^1.2.0",
